# genbooster

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
examples/: 2025_06_14_xgboost_default_overfitting.ipynb  example.py  example_adaboost.py  example_adaboost_classifier.py  example_boosting_classifier.py  example_classifier.py  example_classifiers.py  example_classifiers_gpopt.py  example_learningrate_nestimators.py  example_linear.py  example_randombag_classifier.py  example_regressor2.py  example_regressors.py  example_regressors_gpopt.py  examples_et.py
src/: lib.rs  rust_utils.rs
src/genbooster/: __init__.py  adaboostclassifier.py  adaboostregressor.py  genbooster.py  genboosterclassifier.py  genboosterregressor.py  randombagclassifier.py  randombagregressor.py  regressionmodels.py
src/pythonutils/: __init__.py  utils.py
tests/: conftest.py  test_genbooster.py
