[package]
name = "genbooster"
version = "0.1.0"
edition = "2021"

[lib]
name = "genbooster"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
numpy = "0.19"
ndarray = "0.15"
rand = "0.8"

[build-dependencies]
maturin = "1.0"

[tool.maturin]
python-source = "src"
