[package]
name = "genbooster"
version = "0.1.0"
edition = "2021"

[lib]
name = "genbooster"
crate-type = ["cdylib"]

[dependencies]
linfa = "0.7.1"
linfa-linear = "0.7.1"
linfa-elasticnet = "0.7.1"
linfa-pls = "0.7.1"
numpy = "0.19"
ndarray = "0.15.6"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
rand = "0.8.5"
rand_chacha = "0.3"

[build-dependencies]
maturin = "1.0"

[tool.maturin]
python-source = "src"
